# ChangeLog for net-misc/olsrd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/olsrd/ChangeLog,v 1.31 2012/08/21 15:40:09 johu Exp $

  21 Aug 2012; Johannes Huber <johu@gentoo.org> olsrd-0.6.3.ebuild:
  Stable for x86, wrt bug #429184

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> olsrd-0.6.3.ebuild:
  Stable for amd64, wrt bug #429184

*olsrd-0.6.3 (28 Jun 2012)

  28 Jun 2012; Jeroen Roovers <jer@gentoo.org> -olsrd-0.5.6.7.ebuild,
  -files/olsrd-0.5.6.7-build_fix.patch, -olsrd-0.6.1.ebuild,
  files/olsrd-0.6.1-build_fix.patch, -olsrd-0.6.2.ebuild, +olsrd-0.6.3.ebuild,
  +files/olsrd-0.6.3-make-gtk.patch:
  Version bump.

  22 Apr 2012; Markus Meier <maekke@gentoo.org> olsrd-0.6.2-r1.ebuild:
  x86 stable, bug #333827

  22 Apr 2012; Agostino Sarubbo <ago@gentoo.org> olsrd-0.6.2-r1.ebuild:
  Stable for amd64, wrt bug #333827

*olsrd-0.6.2-r1 (15 Feb 2012)

  15 Feb 2012; Jeroen Roovers <jer@gentoo.org> olsrd-0.6.2.ebuild,
  +olsrd-0.6.2-r1.ebuild:
  Set more dependencies for GTK+. Fix multilib-strict requirements. Install
  plugins in /usr/lib*/olsrd. Remove testing cruft.

  09 Oct 2011; Jeroen Roovers <jer@gentoo.org> -olsrd-0.4.10.ebuild,
  -files/olsrd-0.4.10-makefile.patch,
  -files/olsrd-0.4.10-memleak_in_olsr_remove_scheduler_event.patch,
  -olsrd-0.5.0.ebuild, -olsrd-0.5.1-r1.ebuild,
  -files/olsrd-0.5.1-fix-hashing.patch, -olsrd-0.5.2-r1.ebuild,
  -files/olsrd-0.5.2-bmf.patch, -olsrd-0.5.3.ebuild, -olsrd-0.5.4.ebuild,
  -files/olsrd-0.5.4-build_fix.patch, -olsrd-0.5.5.ebuild,
  -files/olsrd-0.5.5-build_fix.patch, -olsrd-0.5.6.ebuild:
  ^

*olsrd-0.6.2 (07 Oct 2011)

  07 Oct 2011; Jeroen Roovers <jer@gentoo.org> +olsrd-0.6.2.ebuild:
  Version bump. Respect LDFLAGS, fix --as-needed in USE=gtk case.

*olsrd-0.6.1 (06 Jan 2011)

  06 Jan 2011; Cédric Krier <cedk@gentoo.org> +olsrd-0.6.1.ebuild,
  +files/olsrd-0.6.1-build_fix.patch:
  Version bump
