@@ -6,18 +6,16 @@ AUX olsrd-0.6.1-build_fix.patch 208 SHA256 6a5f911361014bf687c7223015c0b4d8cff47
 AUX olsrd-0.6.3-make-gtk.patch 629 SHA256 7f7a3d93194a598ecd265831c83b3a6c1afb56398594694daf7a777551a88d08 SHA512 73435854889c91a7e8c8fcbc90ab61f5389d240fc8720dc447e21e8a1da98bcaf1fbd2977d84c40e6a364caa74b3ea4088354ff6c60b4eae97275c658aff670d WHIRLPOOL 3ac557e648352b7dea754756c8aa29b1fa80c161cbc4a40194e5e1cfa2943787ffa50d8bb81b779220a2ecf1a3dfae2317d9decde29662f8af1281eb610b260c
 DIST olsrd-0.6.2.tar.bz2 650727 SHA256 2ebf5a1054e1cd49b54bb2b226a679328d0bd0d863dddcd01ef7e9e525b80374 SHA512 eb59bef623bbba673cd8fb4bdb08e7953d12558f36314e4197f9443bdb58d22abe9e765238c8b6d0edb426cbbfe062c61e8a7271c1282bf86e0aa0f16fe3f5ff WHIRLPOOL 34f41478c9d2d63468742eb0656480e9af1ee296ac2c25b1d03dc8bff4ba9a07309cb3005cb41b26ae71c1daa626f8e33fd2b276f7f3cb606a101915a413316f
 DIST olsrd-0.6.3.tar.bz2 5447995 SHA256 ef31bb604859737437019e282650b8292515b7a4789b432aae6c42393ab7b9ca SHA512 2edcb8a3864727cd656a0b41fa26bdd57f111f8241a40056dd20f5284f76c31e729c17c5fec36104e23ba53aac3ba558176bf6eaa5de2469e8f04f0c9bd7a7e2 WHIRLPOOL a02277ebbe83690dca9e78611fa302ed0f3140f68fc3a4ac88f1fa953068215655e1a9419ed3143b6db9e69a34987fc6f2a422f4244a56783043ee91a39c56b8
+DIST olsrd-0.6.4.tar.bz2 5469577 SHA256 f8ab1bbdf2e424573a5bff9f2bf6e308c1307556e95c1de72b011949db20945f SHA512 a64b27f6f8ab772e79402ea0ea9e90ea1f980f9bd1fdbb608b41c91f2f942a546757f3a17fd71bd6f4b3dba69d7e96b7b0e028e4b4dcd39c3c22cf0f802cdbcd WHIRLPOOL 0c42e12e7e89719b8e9f7a4b931a71e0aa797bf2ba8507fa1f4dd3b6ede9cbe34ef8f3b3d819646959e54cde8cd61f165daab6b4b6f1e29560899f4bd24f9967
 EBUILD olsrd-0.6.2-r1.ebuild 1960 SHA256 94cd11e4055da7aeb54420105b585315630677a8631c252957919a02a9367b9e SHA512 f3b60caf7fe8f225e2eed389c6951c9e74abc05518207d48309713b53f37bb419643cb00450e01d13bad2a4199b4df422377b7b97a73eca6624e5739ac0ab06b WHIRLPOOL 990347f281886e764c8d058b4752ffb4421094963423130f0c75b6f472598c31fab7d9c9f080191c928a23773e023454599a2f293aef8835e81ebf21aa8dbefa
 EBUILD olsrd-0.6.3.ebuild 1832 SHA256 fe0b47b454561d13f40e1abe7a52f9112e1953c194f65693d1afd98f4e2444b5 SHA512 c0043bfbca0a7b972d287b90b3071015457216708cebbf8600b71bdef43fcccf08d23ad0333bdb1d8c26e31a9e49661a5de9d3ec4dd76a9477f12fa214a31ead WHIRLPOOL 964dcaf74fe03eeea1c4b36c0fec74bf95093fd60df550c4e71950a174347d98c0c4c0bdf540f3c0518ccdd326a74fe9e577d7d080947dd28afde8187ebe7924
-MISC ChangeLog 4808 SHA256 4e7014d08ed2829d5b1050cd1c5c02250dc2c530f81640ee6542e358d0ba1262 SHA512 1205d8c24e28a8bbcf0cea1dcf7f3c707223eb5297ef91c98dcd9c05b776a63109f28ff74225cdcf75de36c571fc3d4df56009abddb5e195ea24a98d31d6725d WHIRLPOOL b20421070e8095f349af5821aa3c018ef1a437bcbd5ad7cfe1db053e1241be5adb6a0638a32b63f0f05368f2a22a606601e539ddd560a505d3301bf6266d5667
+EBUILD olsrd-0.6.4.ebuild 2233 SHA256 1a25d83a7804160096d21d2d42499f2018f1f188bd02978afd181bf73fed7a18 SHA512 3172745fc1f923184dcf4121cef69d1b43d95fcf9e9ad5a44bcda9b5a73d03f9f4c1750b7c7fb2541a5c70727956395265b2ddb4a48c52d6b183c9fc1f6df306 WHIRLPOOL 3e2f029c6a288098e095e5e20d2e5696b64a1582626e3f99b3fed58b87d7cd15dd345f5386d72c8d4289822fcc644ae833418c003b2d8504703adb1cc45b1161
+MISC ChangeLog 5024 SHA256 4b6f2d376efb0a632146957b6deae7494678e48f1c64f4f3b0ad2e4f4234cbf6 SHA512 8f0ad41af7d7849b85e04ec2acd38a99fe5406f77808ec3f80efc31faf96215f3dd9b9690a935079b38b361c93e07de1e7e0e0c25b9aaff717ae0eaf2662b53e WHIRLPOOL ace1c04d9e4ebfca091b2ab2a2286700d7da5515beb7b7a58652b2adafca68749bdbe1f27c1f3ad59d3286bd8fe446667f9fc410699987407a2497ca6f422df2
 MISC metadata.xml 297 SHA256 7eb2efdb97b502f400b391fb3758ded6a0283bf514acc11efa86702fed847f5b SHA512 5fcb587da73c408679e5e2a51c00a928eeec3d0a284638bc457506a2f6fbe7cdc30084a829a8cebfc5fe13ab27003f00497aab0eea406fba75c3b31fa52d9693 WHIRLPOOL 6e1233c65d7d64ed48d1bbf0559f9872b5895d0ff6b2154930521210881252141774e753bdad12587d708cec3e1c740c3177921663aa1bd48b40b2c5e3070470
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQM6vjAAoJEO+t9ga+3I3amwUH/2NBlUW1bebzp6sYA/BYRNfl
-4BvK9Bj+vXeAmPX5sJFO+A2MnmdJr+XQjQUgC2LJKTYOTyDdkmf3dt6Hb+oE0fIv
-0NoLYTSaRUThMEJr8ChbtyQux1awp1tiSW+bpZ9CjEoENvQ/N2PGKjKrCP9uuW8d
-kHRTq3YXp2ClNYj0Bwhmfir7J/gsuG8n9OQNy4dwZ9hJosyqQspkbFOoQNtCJBsQ
-jmGEvtXulAqsxSpm/K/G2/lpL5IMOTC7i/j15yvAm2A689FjmZSP6C0MMUAvHkCM
-65mb/ATQtecHQTdWGJJ0RTJYI/Z8I8eRSQvtwzS2Td/Hnb9+jTrbAH6Rf4db/08=
-=a9H4
+iEYEAREIAAYFAlClHV4ACgkQVWmRsqeSphOzPQCfXBmdixUjy9h1UXkbVBmETjWs
+aLwAn1pxNQZpwjzOkEv1KEs8mYHaelIi
+=IE7H
 -----END PGP SIGNATURE-----
